updated index.html to test push

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>Chyi Ricketts</h1>
     <p>This is my overview page about me as a</p>
     <p>and talks about thinks like my resume</p>
+    <p>some more text</p>
 
     <div class = "nextpg">
         <button class = "arrow"></button>
