Upadted index.html and images to directory

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
 </head>
 
 <body>
-    <br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br>
     <h1>Chyi Ricketts</h1>
     <p>This is my overview page about me as a</p>
     <p>and talks about thinks like my resume</p>
     <p>some more text</p>
 
-    <div class = "nextpg">
-        <button class = "arrow"></button>
+    <div class = "bottom_center">
+        <button onclick = "window.location.href='main.html'">
+            <img src = "Images/down_arrow.jpg" alt="Arrow Button" width = 50% height = auto>
+        </button>
     </div>
+    
 </body>
 
 </html>
