Purging to start over

--- a/index.html
+++ b/index.html
@@ -4,21 +4,11 @@
     <meta charset="UTF-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     <title>Final Project Landing Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
-    <br><br><br><br><br><br><br><br><br><br>
-    <h1>Chyi Ricketts</h1>
-    <p>This is my overview page about me as a</p>
-    <p>and talks about thinks like my resume</p>
-    <p>some more text</p>
 
-    <div class = "bottom_center">
-        <button onclick = "window.location.href='main.html'">
-            <img src = "Images/down_arrow.jpg" alt="Arrow Button" width = 50% height = auto>
-        </button>
-    </div>
     
 </body>
 
