dark theme version

--- a/main.html
+++ b/main.html
@@ -8,6 +8,87 @@
 </head>
 
 <body>
+    <header>
+        <h2>Chyi Ricketts</h2>
+        <p>Biology Major. Coding Lover. Computational Biologist.</p>
+    </header>
+
+
+    <div class="hover-zone"></div>
+    <div class = "navbar">
+        <ul>
+            <li>
+                <a href = "index.html">Return to previous page</a>
+            </li>
+            <li>Project 1</li>
+            <li>Project 2</li>
+            <li>Project 3</li>
+        </ul>
+    </div>
+
+    <div class = "section-container">
+        <div class = "section">
+            <div>
+                <img src = "Images/zf-eye.png">
+            </div>
+            <div>
+                <h1>Project 1</h1>
+                <p>this is about my first projectthis is about my first projectthis is about my first projectthis is about my first project</p>
+            </div>
+        </div>
+
+        <div class = "section">
+            <div>
+                <h1>Project 2</h1>
+                <p>this is about my first projectthis is about my first projectthis is about my first projectthis is about my first project</p>
+            </div>
+            <div>
+                <img src = "Images/zf-eye.png">
+            </div>
+        </div>
+
+        <hr> 
+        <!-- not working -->
+
+        <div class = "section">
+            <div>
+                <img src = "Images/zf-eye.png">
+                <br><br>
+                <h1>Project 3</h1>
+                <p>this is about my first projectthis is about my first projectthis is about my first projectthis is about my first project</p>
+            </div>
+            <div>
+                <img src = "Images/zf-eye.png">      
+                <br><br>
+                <h1>Project 4</h1>
+                <p>this is about my first projectthis is about my first projectthis is about my first projectthis is about my first project</p>
+            </div>
+            <div>
+                <img src = "Images/zf-eye.png">
+                <br><br>
+                <h1>Project 5</h1>
+                <p>this is about my first projectthis is about my first projectthis is about my first projectthis is about my first project</p>
+            </div>
+        </div>
+
+        <div class = "section">
+            <div>
+                <!-- <img src = "Images/zf-eye.png">
+                <img src = "Images/zf-eye.png">
+                <img src = "Images/zf-eye.png"> -->
+                <p>exp. design</p>
+                <p>exp. design</p>
+                <p>exp. design</p>
+                <p>exp. design</p>
+                <p>exp. design</p>
+                <p>exp. design</p>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <p>By Chyi Ricketts</p>
+    </footer>
 
 </body>
 
