--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     <title>Final Project Landing Page</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="image-container">
+        <div class="gradient-overlay">
+            <div class = "title">
+                <h1>Chyi Ricketts</h1>
+                <button onclick = "window.location.href='main.html'" class = "enter" >Click to Enter</button>
+            </div>
+        </div>
+    </div>
 
-    
 </body>
 
 </html>
