Most of main website done, beginning the rest

--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h2>Chyi Ricketts</h2>
-        <p>Biology Major. Coding Lover. Computational Biologist.</p>
+        <p>Aspiring Computational Biology Student to Progress Meaningful Research.</p>
     </header>
 
 
@@ -20,54 +20,65 @@
             <li>
                 <a href = "index.html">Return to previous page</a>
             </li>
-            <li>Project 1</li>
-            <li>Project 2</li>
-            <li>Project 3</li>
+            <br>
+            <li>Di Talia Lab</li>
+            <li>Huang Lab</li>
+            <li>Fraticelli Lab</li>
+            <li>Bagnat Lab</li>
+            <li>Download my Resume</li>
+            <br>
+            <li>Data Analysis</li>
         </ul>
     </div>
+    <div class="arrow-toggle">&#9654;</div> <!-- Left arrow -->
 
     <div class = "section-container">
         <div class = "section">
             <div>
-                <img src = "Images/zf-eye.png">
+                <img src = "Images/cellpose-cong2.png">
             </div>
             <div>
-                <h1>Project 1</h1>
-                <p>this is about my first projectthis is about my first projectthis is about my first projectthis is about my first project</p>
+                <h1>Di Talia Lab</h1>
+                <p>Shadowed Priyom Adhyapok, PhD</p>
+                <p>Duke University, Durham, North Carolina, USA</p>
+                <br>
+                <!-- <p>Shadowed Priyom Adhyapok, PhD studying signaling pathways of the embryonic development of the notochord through Confocal Microscopy</p> -->
+                <!-- <p>Used CellPose to analyze images of the develping notochord from 5 days post fertilization (dpf) every 4 hours for 40 hours</p> -->
+                <button onclick = "window.location.href='project_1.html'">Learn More</button>
             </div>
         </div>
 
         <div class = "section">
             <div>
-                <h1>Project 2</h1>
-                <p>this is about my first projectthis is about my first projectthis is about my first projectthis is about my first project</p>
+                <h1>Huang Lab</h1>
+                <p>Summer Research Scholar with Linfeng Huang, PhD</p>
+                <p>Duke Kunshan University, Jiangsu, China</p>
+                <br>
+                <button onclick = "window.location.href='project_2.html'">Learn More</button>
             </div>
             <div>
-                <img src = "Images/zf-eye.png">
+                <img src = "Images/petri.jpg">
             </div>
         </div>
 
-        <hr> 
-        <!-- not working -->
-
         <div class = "section">
-            <div>
-                <img src = "Images/zf-eye.png">
+            <div class = "sm-section">
+                <img src = "Images/petri2.jpg">
                 <br><br>
-                <h1>Project 3</h1>
-                <p>this is about my first projectthis is about my first projectthis is about my first projectthis is about my first project</p>
+                <h1>Fraticelli Lab</h1>
+                <p>Institute of Research Biomedicine, Barcelona, Spain</p>
             </div>
-            <div>
-                <img src = "Images/zf-eye.png">      
+            <div class = "sm-section">
+                <img src = "Images/gel.jpg">      
                 <br><br>
-                <h1>Project 4</h1>
-                <p>this is about my first projectthis is about my first projectthis is about my first projectthis is about my first project</p>
+                <h1>Bagnat Lab</h1>
+                <p>Duke University, Durham, North Carolina, USA</p>
             </div>
-            <div>
-                <img src = "Images/zf-eye.png">
+            <div class = "sm-section">
+                <img src = "Images/gel.jpg">
                 <br><br>
-                <h1>Project 5</h1>
-                <p>this is about my first projectthis is about my first projectthis is about my first projectthis is about my first project</p>
+                <h1>IDK</h1>
+                <p>Clinton, New Jersey, USA, more words for the plot</p>
             </div>
         </div>
 
@@ -87,9 +98,10 @@
     </div>
 
     <footer>
-        <p>By Chyi Ricketts</p>
+        <p>@Chyi Ricketts</p>
     </footer>
 
+    <script src="main_script.js"></script>
 </body>
 
 </html>
