--- a/project_1.html
+++ b/project_1.html
@@ -4,11 +4,53 @@
     <meta charset="UTF-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     <title>Final Project Project 2</title>
-    <link rel="stylesheet" href="main_style.css">
+    <link rel="stylesheet" href="project_style.css">
 </head>
 
 <body>
-    <h1>PROJECT 1</h1>
+    <header>
+        <button class = "return-button" onclick = "window.location.href='main.html'">Return</button>
+        <h1>Di Talia Lab</h1>
+    </header>
+
+    <div class = "img-row">
+        <img src = "Images/segmented_2.png">
+        <img src = "Images/cellposecodee.png">
+        <img src = "Images/segmented_5.png">
+    </div>
+
+    <div class = "text-container">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque eos qui voluptas odio architecto tenetur quod earum molestias a maxime dignissimos fuga totam adipisci veniam, ab ipsum nesciunt consequuntur voluptate.</p>
+    </div>
+
+    <div class = "img-row">
+        <img src = "Images/5-6analysis.png">
+        <img src = "Images/cellpose-cong2.png">
+        <img src = "Images/7-8analysis.png">
+    </div>
+
+    <br><br>
+    <br><br>
+    <br><br>
+
+    <footer>
+        <h1>Connect With Me!</h1>
+        <div class = "icon-container">
+            <button>
+                <img src = "Images/github.svg">
+            </button>
+            <button>
+                <img src = "Images/mail.svg">
+            </button>
+            <button>
+                <img src = "Images/facebook.svg">
+            </button>
+            <button>
+                <img src = "Images/linkedin.svg">
+            </button>
+        </div>
+        <p>@Chyi Ricketts</p>
+    </footer>
 </body>
 
 </html>
