landing page finished, theme determined

--- a/main.html
+++ b/main.html
@@ -5,14 +5,14 @@
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     <title>Final Project Main Page</title>
     <link rel="stylesheet" href="main_style.css">
+    <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'>
 </head>
 
 <body>
     <header>
         <h2>Chyi Ricketts</h2>
-        <p>Aspiring Computational Biology Student to Progress Meaningful Research.</p>
+        <p>Computational Biology Student</p>
     </header>
-
 
     <div class="hover-zone"></div>
     <div class = "navbar">
@@ -126,6 +126,8 @@
                 <img src = "Images/linkedin.svg">
             </button>
         </div>
+        <p>Multimedia Web Design Fall 2024</p>
+        </p>
         <p>@Chyi Ricketts</p>
     </footer>
 
