--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     <title>Final Project Landing Page</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'>
 </head>
 
 <body>
-    <div class="image-container">
-        <div class="gradient-overlay">
-            <div class = "title">
-                <h1>Chyi Ricketts</h1>
-                <button onclick = "window.location.href='main.html'" class = "enter" >Click to Enter</button>
-            </div>
-        </div>
-    </div>
+    <!-- <canvas id="shapes" width="700px" height="756"></canvas> -->
+    <canvas id="shapes" width="100%" height="100%"></canvas>
 
+    <h1>CHYI RICKETTS</h1>
+    <p>Hey! I'm Chyi Ricketts and I'm an undergraduate student at Duke Kunshan University studying Molecular Bioscience (specializing in Genetics and Genomics) and interested in Computer Science. I am to study the intersection of the two fields to advance computational analysis of scientific research. </p>    
+
+    <button onclick = "window.location.href='main.html'">ENTER WEBSITE</button>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
