--- a/datavis.html
+++ b/datavis.html
@@ -4,12 +4,57 @@
     <meta charset="UTF-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     <title>Data Visualization Page</title>
-    <link rel="stylesheet" href="datavis_style.css">
+    <link rel="stylesheet" href="project_style.css">
+    <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'>
+
 </head>
 
 <body>
-    <h1>Data Visualization</h1>
+    <header>
+        <h1>Data Visualization Project</h1>
+    </header>
 
+    <button class = "return-button" onclick = "window.location.href='main.html'">
+        Return
+    </button>
+
+    <div class = "graph-container">
+        <img src = "Images/Cell Segmentation Model Performance.png">
+        <img src = "Images/ERK Expression Graph.png">
+    </div>
+
+    <br><br><br>
+
+    <div class = "text-container">
+        <p>The goal of this project is to create a site to analyze complex cellular segmentation data. 
+            Data collected from CellPose in the form of tif and seg.npy files would be able to uploaded and processed using python. 
+            An easy method of selecting what you would like to visualize will trigger certain code to run and calculate certain parameters. 
+            This would make analyzing data from CellPose much more efficient and allow for researchers to be able to analyze their data and take thier next steps. 
+            This program would also allow the user to take a look into individual datapoints to identify errors instead of needing to dive deep into code to identify the error. 
+        </p>
+    </div>
+
+    <br><br><br>
+
+    <footer>
+        <h1>Connect With Me!</h1>
+        <div class = "icon-container">
+            <button onclick="window.open('https://github.com/chyiricketts', '_blank');">
+                <img src = "Images/github.svg">
+            </button>
+            <button onclick="window.location.href='mailto:chyi.ricketts@gmail.com';">
+                <img src = "Images/mail.svg">
+            </button>
+            <button onclick="window.open('https://www.facebook.com/chyi.ricketts', '_blank');">
+                <img src = "Images/facebook.svg">
+            </button>
+            <button onclick="window.open('www.linkedin.com/in/chyi-ricketts', '_blank');">
+                <img src = "Images/linkedin.svg">
+            </button>
+        </div>
+        <p>Multimedia Web Design Fall 2024</p>
+        <p>@Chyi Ricketts</p>
+    </footer>
 </body>
 
 </html>
