--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h2>Chyi Ricketts</h2>
-        <p>Computational Biology Student</p>
+        <p>Computational Biology Student: Experience</p>
     </header>
 
     <div class="hover-zone"></div>
@@ -22,16 +22,24 @@
             </button>
             <br>
             <button class = "li-container">
-                <li>Di Talia Lab</li>
+                <li>
+                    <a href = "#ditalia">Di Talia Lab</a>
+                </li>
             </button>
             <button class = "li-container">
-                <li>Huang Lab</li>
+                <li>
+                    <a href = "#huang">Huang Lab</a>
+                </li>
             </button>
             <button class = "li-container">
-                <li>Fraticelli Lab</li>
+                <li>
+                    <a href = "#three">Fraticelli Lab</a>
+                </li>
             </button>
             <button class = "li-container">
-                <li>Bagnat Lab</li>
+                <li>
+                    <a href = "#three">Bagnat Lab</a>
+                </li>
             </button>
             <button class = "li-container">
                 <li>Data Visualization</li>
@@ -46,7 +54,7 @@
     <div class="arrow-toggle">&#9654;</div> <!-- Left arrow -->
 
     <div class = "section-container">
-        <div class = "section">
+        <div class = "section" id = "ditalia">
             <div>
                 <img src = "Images/cellpose-cong2.png">
             </div>
@@ -61,7 +69,7 @@
             </div>
         </div>
 
-        <div class = "section">
+        <div class = "section" id = "huang">
             <div>
                 <h1>Huang Lab</h1>
                 <p>Summer Research Scholar with Linfeng Huang, PhD</p>
@@ -74,7 +82,7 @@
             </div>
         </div>
 
-        <div class = "section">
+        <div class = "section" id = "three">
             <div class = "sm-section">
                 <img src = "Images/petri2.jpg">
                 <br><br>
@@ -88,10 +96,10 @@
                 <p>Duke University, Durham, North Carolina, USA</p>
             </div>
             <div class = "sm-section">
-                <img src = "Images/gel.jpg">
+                <img src = "Images/duckweed.webp">
                 <br><br>
-                <h1>IDK</h1>
-                <p>Clinton, New Jersey, USA, more words for the plot</p>
+                <h1>Waksman</h1>
+                <p>Rutgers University, New Brunswick, New Jersey, USA</p>
             </div>
         </div>
 
@@ -100,34 +108,32 @@
                 <!-- <img src = "Images/zf-eye.png">
                 <img src = "Images/zf-eye.png">
                 <img src = "Images/zf-eye.png"> -->
-                <p>exp. design</p>
-                <p>exp. design</p>
-                <p>exp. design</p>
-                <p>exp. design</p>
-                <p>exp. design</p>
-                <p>exp. design</p>
+                <h1>Data Visualization Project</h1>
+                <p>I am currently working on a project to develop a user-friendly site to analyze complex cellular segmentation data.</p><br>
+                <button onclick = "window.location.href='datavis.html'">Check It Out!</button>
             </div>
         </div>
     </div>
 
+    <br><br><br>
+
     <footer>
         <h1>Connect With Me!</h1>
         <div class = "icon-container">
-            <button>
+            <button onclick="window.open('https://github.com/chyiricketts', '_blank');">
                 <img src = "Images/github.svg">
             </button>
-            <button>
+            <button onclick="window.location.href='mailto:chyi.ricketts@gmail.com';">
                 <img src = "Images/mail.svg">
             </button>
-            <button>
+            <button onclick="window.open('https://www.facebook.com/chyi.ricketts', '_blank');">
                 <img src = "Images/facebook.svg">
             </button>
-            <button>
+            <button onclick="window.open('www.linkedin.com/in/chyi-ricketts', '_blank');">
                 <img src = "Images/linkedin.svg">
             </button>
         </div>
         <p>Multimedia Web Design Fall 2024</p>
-        </p>
         <p>@Chyi Ricketts</p>
     </footer>
 
