--- a/project_1.html
+++ b/project_1.html
@@ -5,6 +5,7 @@
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     <title>Final Project Project 2</title>
     <link rel="stylesheet" href="project_style.css">
+    <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'>
 </head>
 
 <body>
@@ -20,7 +21,11 @@
     </div>
 
     <div class = "text-container">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque eos qui voluptas odio architecto tenetur quod earum molestias a maxime dignissimos fuga totam adipisci veniam, ab ipsum nesciunt consequuntur voluptate.</p>
+        <p>At the Di Talia Lab working under Principle Investigator, Stefano Di Talia and Post Doc, Priyom Adhyapok, we studied the Synchronized Clocks in Zebrafish Patterning. 
+            To do such, we used confocal microscopy to image fish 5 days post fertilization every 4 hours for 40 hours to study the growth of the embryo. 
+            After, we utilized CellPose, a AI Segmentation program, to segment each individual cell and analyze their protein expression using GFP emission. 
+            I focused on streamlining this process by training CellPose models with ground truth models of already segmented cells.
+            Afterwards, we worked on analyzing the change in protein expression over time during each additional vertebrae being developed in the notochord.</p>
     </div>
 
     <div class = "img-row">
@@ -36,21 +41,23 @@
     <footer>
         <h1>Connect With Me!</h1>
         <div class = "icon-container">
-            <button>
+            <button onclick="window.open('https://github.com/chyiricketts', '_blank');">
                 <img src = "Images/github.svg">
             </button>
-            <button>
+            <button onclick="window.location.href='mailto:chyi.ricketts@gmail.com';">
                 <img src = "Images/mail.svg">
             </button>
-            <button>
+            <button onclick="window.open('https://www.facebook.com/chyi.ricketts', '_blank');">
                 <img src = "Images/facebook.svg">
             </button>
-            <button>
+            <button onclick="window.open('www.linkedin.com/in/chyi-ricketts', '_blank');">
                 <img src = "Images/linkedin.svg">
             </button>
         </div>
+        <p>Multimedia Web Design Fall 2024</p>
         <p>@Chyi Ricketts</p>
     </footer>
+
 </body>
 
 </html>
