--- a/project_2.html
+++ b/project_2.html
@@ -5,6 +5,7 @@
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     <title>Final Project Project 2</title>
     <link rel="stylesheet" href="project_style.css">
+    <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'>
 </head>
 
 <body>
@@ -14,19 +15,26 @@
     </header>
 
     <div class = "img-row">
-        <img src = "Images/segmented_2.png">
-        <img src = "Images/cellpose-cong2.png">
-        <img src = "Images/segmented_5.png">
+        <img src = "Images/concen_excel3.jpg">
+        <img src = "Images/frozen_siRNA.jpg">
+        <img src = "Images/concen_excel.jpg">
+
     </div>
 
     <div class = "text-container">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque eos qui voluptas odio architecto tenetur quod earum molestias a maxime dignissimos fuga totam adipisci veniam, ab ipsum nesciunt consequuntur voluptate.</p>
+        <p>At the Huang Lab with Priniciple Investigator Professor Linfeng Huang and Postdoctorate Researcher Beibei Huo, we looked at siRNA (small interfering RNAs) in liver cancer cells.
+            I first came into this lab as a Summer Research Scholar (SRS). We focused on the process of isolating and purifying siRNA from cells in where we induced their expression. 
+            Our group of five, would then use a nanodrop to measure the concentration of isolated siRNA. 
+            Professor Huang's Lab recently published a paper on the methods of inducing and isolating siRNA. 
+            Then, we would use reverse transfection to introduce these different siRNAs into eukaryotic cells. 
+            We would stain them with fluorescent dyes to analyze the toxicity of each strain of siRNA.
+        </p>
     </div>
 
     <div class = "img-row">
-        <img src = "Images/5-6analysis.png">
-        <img src = "Images/segmented_7.png">
-        <img src = "Images/7-8analysis.png">
+        <img src = "Images/concen.jpg">
+        <img src = "Images/bio304.jpg">
+        <img src = "Images/concen_excel2.jpg">
     </div>
 
     <br><br>
@@ -36,21 +44,23 @@
     <footer>
         <h1>Connect With Me!</h1>
         <div class = "icon-container">
-            <button>
+            <button onclick="window.open('https://github.com/chyiricketts', '_blank');">
                 <img src = "Images/github.svg">
             </button>
-            <button>
+            <button onclick="window.location.href='mailto:chyi.ricketts@gmail.com';">
                 <img src = "Images/mail.svg">
             </button>
-            <button>
+            <button onclick="window.open('https://www.facebook.com/chyi.ricketts', '_blank');">
                 <img src = "Images/facebook.svg">
             </button>
-            <button>
+            <button onclick="window.open('www.linkedin.com/in/chyi-ricketts', '_blank');">
                 <img src = "Images/linkedin.svg">
             </button>
         </div>
+        <p>Multimedia Web Design Fall 2024</p>
         <p>@Chyi Ricketts</p>
     </footer>
+
 </body>
 
 </html>
