Most likely the final commit for this semester. Landing page font sizes to em

--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!--References Statement: 
+I used ChatGPT to help when I was coding
+Nothing was directly copied and pased, but I used it to understand some concepts and debug some code
+This applies to all my files.
+
+Other websites were also used for learning and/or inspiration including: 
+W3Schools.com
+Codeacademy.com
+https://www.christyannejones.com/
+https://www.kevinmbeaulieu.com/
+-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +22,6 @@
 </head>
 
 <body>
-    <!-- <canvas id="shapes" width="700px" height="756"></canvas> -->
     <canvas id="shapes" width="100%" height="100%"></canvas>
 
     <h1>CHYI RICKETTS</h1>
