--- a/project_1.html
+++ b/project_1.html
@@ -15,23 +15,23 @@
     </header>
 
     <div class = "img-row">
-        <img src = "Images/segmented_2.png">
-        <img src = "Images/cellposecodee.png">
-        <img src = "Images/segmented_5.png">
+        <img src = "Images/segmented_2.png" alt = "segmented notochords fish 2">
+        <img src = "Images/cellposecodee.png" alt = "CellPose python code">
+        <img src = "Images/segmented_5.png" alt = "segmented notochords fish 5">
     </div>
 
     <div class = "text-container">
         <p>At the Di Talia Lab working under Principle Investigator, Stefano Di Talia and Post Doc, Priyom Adhyapok, we studied the Synchronized Clocks in Zebrafish Patterning. 
             To do such, we used confocal microscopy to image fish 5 days post fertilization every 4 hours for 40 hours to study the growth of the embryo. 
-            After, we utilized CellPose, a AI Segmentation program, to segment each individual cell and analyze their protein expression using GFP emission. 
+            After, we utilized CellPose, a AI Segmentation program, to segment each individual cell and analyze their ERK protein expression using GFP emission. 
             I focused on streamlining this process by training CellPose models with ground truth models of already segmented cells.
-            Afterwards, we worked on analyzing the change in protein expression over time during each additional vertebrae being developed in the notochord.</p>
+            Afterwards, we worked on analyzing the change in ERK protein expression over time during each additional vertebrae being developed in the notochord.</p>
     </div>
 
     <div class = "img-row">
-        <img src = "Images/5-6analysis.png">
-        <img src = "Images/cellpose-cong2.png">
-        <img src = "Images/7-8analysis.png">
+        <img src = "Images/5-6analysis.png" alt = "GFP Expression fish5-6">
+        <img src = "Images/cellpose-cong2.png" alt = "Cellpose Segmentation">
+        <img src = "Images/7-8analysis.png" alt = "GFP Expression fish 7-8">
     </div>
 
     <br><br>
@@ -42,16 +42,16 @@
         <h1>Connect With Me!</h1>
         <div class = "icon-container">
             <button onclick="window.open('https://github.com/chyiricketts', '_blank');">
-                <img src = "Images/github.svg">
+                <img src = "Images/github.svg" alt = "Github icon">
             </button>
             <button onclick="window.location.href='mailto:chyi.ricketts@gmail.com';">
-                <img src = "Images/mail.svg">
+                <img src = "Images/mail.svg" alt = "Email icon">
             </button>
             <button onclick="window.open('https://www.facebook.com/chyi.ricketts', '_blank');">
-                <img src = "Images/facebook.svg">
+                <img src = "Images/facebook.svg" alt = "Facebook icon">
             </button>
             <button onclick="window.open('www.linkedin.com/in/chyi-ricketts', '_blank');">
-                <img src = "Images/linkedin.svg">
+                <img src = "Images/linkedin.svg" alt = "Linkedin icon">
             </button>
         </div>
         <p>Multimedia Web Design Fall 2024</p>
