--- a/datavis.html
+++ b/datavis.html
@@ -19,18 +19,32 @@
     </button>
 
     <div class = "graph-container">
-        <img src = "Images/Cell Segmentation Model Performance.png">
-        <img src = "Images/ERK Expression Graph.png">
+        <img src = "Images/Cell Segmentation Model Performance.png" alt = "Model Performance Graph">
+        <img src = "Images/ERK Expression Graph.png" alt = "ERK Expression Graph">
     </div>
 
     <br><br><br>
 
     <div class = "text-container">
-        <p>The goal of this project is to create a site to analyze complex cellular segmentation data. 
+        <p>
+            The goal of this project is to create a site to analyze complex cellular segmentation data. 
             Data collected from CellPose in the form of tif and seg.npy files would be able to uploaded and processed using python. 
             An easy method of selecting what you would like to visualize will trigger certain code to run and calculate certain parameters. 
             This would make analyzing data from CellPose much more efficient and allow for researchers to be able to analyze their data and take thier next steps. 
             This program would also allow the user to take a look into individual datapoints to identify errors instead of needing to dive deep into code to identify the error. 
+        </p>
+    </div>
+    <br><br>
+    <div class = "text-container">
+        <p>
+            This project is unfinished. I expected to be much farther along with my Signature Work at this time and I regret to inform both you and my Signature Work Mentor that I have
+            not made very much progress this semester. Therefore, I will not be able to show my data processing vision on this website as I had initially hoped to do. 
+        </p>
+    </div>
+    <br><br>
+    <div class = "text-container">
+        <p>
+            Thank you!
         </p>
     </div>
 
@@ -40,16 +54,16 @@
         <h1>Connect With Me!</h1>
         <div class = "icon-container">
             <button onclick="window.open('https://github.com/chyiricketts', '_blank');">
-                <img src = "Images/github.svg">
+                <img src = "Images/github.svg" alt = "Github icon">
             </button>
             <button onclick="window.location.href='mailto:chyi.ricketts@gmail.com';">
-                <img src = "Images/mail.svg">
+                <img src = "Images/mail.svg" alt = "Email icon">
             </button>
             <button onclick="window.open('https://www.facebook.com/chyi.ricketts', '_blank');">
-                <img src = "Images/facebook.svg">
+                <img src = "Images/facebook.svg" alt = "Facebook icon">
             </button>
             <button onclick="window.open('www.linkedin.com/in/chyi-ricketts', '_blank');">
-                <img src = "Images/linkedin.svg">
+                <img src = "Images/linkedin.svg" alt = "Linkedin icon">
             </button>
         </div>
         <p>Multimedia Web Design Fall 2024</p>
