--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
         <p>Computational Biology Student: Experience</p>
     </header>
 
+    <!--Navigation Bar-->
     <div class="hover-zone"></div>
     <div class = "navbar">
         <ul>
@@ -21,50 +22,44 @@
                 <li>Return to Home</li>    
             </button>
             <br>
-            <button class = "li-container">
-                <li>
-                    <a href = "#ditalia">Di Talia Lab</a>
-                </li>
+            <button class="li-container" onclick="window.location.href='#ditalia'">
+                <li>Di Talia Lab</li>
             </button>
-            <button class = "li-container">
-                <li>
-                    <a href = "#huang">Huang Lab</a>
-                </li>
+            <button class="li-container" onclick="window.location.href='#huang'">
+                <li>Huang Lab</li>
             </button>
-            <button class = "li-container">
-                <li>
-                    <a href = "#three">Fraticelli Lab</a>
-                </li>
+            <button class="li-container" onclick="window.location.href='#three'">
+                <li>Fraticelli Lab</li>
             </button>
-            <button class = "li-container">
-                <li>
-                    <a href = "#three">Bagnat Lab</a>
-                </li>
+            <button class="li-container" onclick="window.location.href='#three'">
+                <li>Bagnat Lab</li>
             </button>
-            <button class = "li-container">
+            <button class="li-container" onclick="window.location.href='#three'">
+                <li>Waksman</li>
+            </button>
+            <button class="li-container" onclick="window.location.href='#datavis'">
                 <li>Data Visualization</li>
             </button>
-            <br>
+                        <br>
             <button class = "li-container" onclick="window.open('Images/Resume.pdf', '_blank')">
                 <li>Download my Resume</li>
             </button>
             <br>
         </ul>
     </div>
-    <div class="arrow-toggle">&#9654;</div> <!-- Left arrow -->
+    <div class="arrow-toggle">&#9654;</div>
 
+    <!--Page Main Body-->
     <div class = "section-container">
         <div class = "section" id = "ditalia">
             <div>
-                <img src = "Images/cellpose-cong2.png">
+                <img src = "Images/cellpose-cong2.png" alt = "CellPose Segmentation">
             </div>
             <div>
                 <h1>Di Talia Lab</h1>
                 <p>Shadowed Priyom Adhyapok, PhD</p>
                 <p>Duke University, Durham, North Carolina, USA</p>
                 <br>
-                <!-- <p>Shadowed Priyom Adhyapok, PhD studying signaling pathways of the embryonic development of the notochord through Confocal Microscopy</p> -->
-                <!-- <p>Used CellPose to analyze images of the develping notochord from 5 days post fertilization (dpf) every 4 hours for 40 hours</p> -->
                 <button onclick = "window.location.href='project_1.html'">Learn More</button>
             </div>
         </div>
@@ -78,36 +73,36 @@
                 <button onclick = "window.location.href='project_2.html'">Learn More</button>
             </div>
             <div>
-                <img src = "Images/petri.jpg">
+                <img src = "Images/petri.jpg" alt = "Petri Dish with Bacillus Bacteria">
             </div>
         </div>
 
         <div class = "section" id = "three">
             <div class = "sm-section">
-                <img src = "Images/petri2.jpg">
+                <img src = "Images/petri2.jpg" alt = "Petri Dish with Tissue">
                 <br><br>
                 <h1>Fraticelli Lab</h1>
                 <p>Institute of Research Biomedicine, Barcelona, Spain</p>
+                <p>Worked under Principle Investigator Alejo Fraticelli to study the effect of varying dosages of cancer drugs on eukaryotic cells.</p>
             </div>
             <div class = "sm-section">
-                <img src = "Images/gel.jpg">      
+                <img src = "Images/gel.jpg" alt = "Electrophoresis Gel">      
                 <br><br>
                 <h1>Bagnat Lab</h1>
                 <p>Duke University, Durham, North Carolina, USA</p>
+                <p>Worked under Principle Investigator Michel Bagnat and Assistant Professor Daniel Levic to study sorting proteins in the interstitial lumen of Zebrafish.</p>
             </div>
             <div class = "sm-section">
-                <img src = "Images/duckweed.webp">
+                <img src = "Images/duckweed.webp" alt = "Duckweek">
                 <br><br>
                 <h1>Waksman</h1>
                 <p>Rutgers University, New Brunswick, New Jersey, USA</p>
+                <p>Joined a program at Rutgers University to isolate and identify 3 novel proteins from <i>Lemna minor</i>, Duckweed. These were published in the NCBI database.</p>
             </div>
         </div>
 
-        <div class = "section">
+        <div class = "section" id = "datavis">
             <div>
-                <!-- <img src = "Images/zf-eye.png">
-                <img src = "Images/zf-eye.png">
-                <img src = "Images/zf-eye.png"> -->
                 <h1>Data Visualization Project</h1>
                 <p>I am currently working on a project to develop a user-friendly site to analyze complex cellular segmentation data.</p><br>
                 <button onclick = "window.location.href='datavis.html'">Check It Out!</button>
@@ -117,20 +112,21 @@
 
     <br><br><br>
 
+    <!--Footer-->
     <footer>
         <h1>Connect With Me!</h1>
         <div class = "icon-container">
             <button onclick="window.open('https://github.com/chyiricketts', '_blank');">
-                <img src = "Images/github.svg">
+                <img src = "Images/github.svg" alt = "Github icon">
             </button>
             <button onclick="window.location.href='mailto:chyi.ricketts@gmail.com';">
-                <img src = "Images/mail.svg">
+                <img src = "Images/mail.svg" alt = "Email icon">
             </button>
             <button onclick="window.open('https://www.facebook.com/chyi.ricketts', '_blank');">
-                <img src = "Images/facebook.svg">
+                <img src = "Images/facebook.svg" alt = "Facebook icon">
             </button>
             <button onclick="window.open('www.linkedin.com/in/chyi-ricketts', '_blank');">
-                <img src = "Images/linkedin.svg">
+                <img src = "Images/linkedin.svg" alt = "Linkedin icon">
             </button>
         </div>
         <p>Multimedia Web Design Fall 2024</p>
