--- a/project_2.html
+++ b/project_2.html
@@ -15,9 +15,9 @@
     </header>
 
     <div class = "img-row">
-        <img src = "Images/concen_excel3.jpg">
-        <img src = "Images/frozen_siRNA.jpg">
-        <img src = "Images/concen_excel.jpg">
+        <img src = "Images/concen_excel3.jpg" alt = "Transfection Concentrations 3">
+        <img src = "Images/frozen_siRNA.jpg" alt = "Frozen siRNA wellplate">
+        <img src = "Images/concen_excel.jpg" alt = "Transfection Concentrations 1">
 
     </div>
 
@@ -32,9 +32,9 @@
     </div>
 
     <div class = "img-row">
-        <img src = "Images/concen.jpg">
-        <img src = "Images/bio304.jpg">
-        <img src = "Images/concen_excel2.jpg">
+        <img src = "Images/concen.jpg" alt = "Transfection Concentrations 0">
+        <img src = "Images/bio304.jpg" alt = "Bacteria Petri Dish 3">
+        <img src = "Images/concen_excel2.jpg" alt = "Transfection Concentrations 2">
     </div>
 
     <br><br>
@@ -45,16 +45,16 @@
         <h1>Connect With Me!</h1>
         <div class = "icon-container">
             <button onclick="window.open('https://github.com/chyiricketts', '_blank');">
-                <img src = "Images/github.svg">
+                <img src = "Images/github.svg" alt = "Github icon">
             </button>
             <button onclick="window.location.href='mailto:chyi.ricketts@gmail.com';">
-                <img src = "Images/mail.svg">
+                <img src = "Images/mail.svg" alt = "Email icon">
             </button>
             <button onclick="window.open('https://www.facebook.com/chyi.ricketts', '_blank');">
-                <img src = "Images/facebook.svg">
+                <img src = "Images/facebook.svg" alt = "Facebook icon">
             </button>
             <button onclick="window.open('www.linkedin.com/in/chyi-ricketts', '_blank');">
-                <img src = "Images/linkedin.svg">
+                <img src = "Images/linkedin.svg" alt = "Linkedin icon">
             </button>
         </div>
         <p>Multimedia Web Design Fall 2024</p>
