--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@ https://www.kevinmbeaulieu.com/
 <body>
     <canvas id="shapes" width="100%" height="100%"></canvas>
 
-    <h1>CHYI RICKETTS</h1>
-    <p>Hey! I'm Chyi Ricketts and I'm an undergraduate student at Duke Kunshan University studying Molecular Bioscience (specializing in Genetics and Genomics) and interested in Computer Science. I am to study the intersection of the two fields to advance computational analysis of scientific research. </p>    
+    <div class = "text">
+        <h1>CHYI RICKETTS</h1>
+        <p>Hey! I'm Chyi Ricketts and I'm an undergraduate student at Duke Kunshan University studying Molecular Bioscience (specializing in Genetics and Genomics) and interested in Computer Science. I am to study the intersection of the two fields to advance computational analysis of scientific research. </p>        
+        <button onclick = "window.location.href='main.html'">ENTER WEBSITE</button>
+    </div>
 
-    <button onclick = "window.location.href='main.html'">ENTER WEBSITE</button>
 
     <script src="script.js"></script>
 </body>
