--- a/main.html
+++ b/main.html
@@ -28,13 +28,13 @@
             <button class="li-container" onclick="window.location.href='#huang'">
                 <li>Huang Lab</li>
             </button>
-            <button class="li-container" onclick="window.location.href='#three'">
+            <button class="li-container" onclick="window.location.href='#fraticelli'">
                 <li>Fraticelli Lab</li>
             </button>
-            <button class="li-container" onclick="window.location.href='#three'">
+            <button class="li-container" onclick="window.location.href='#bagnat'">
                 <li>Bagnat Lab</li>
             </button>
-            <button class="li-container" onclick="window.location.href='#three'">
+            <button class="li-container" onclick="window.location.href='#waksman'">
                 <li>Waksman</li>
             </button>
             <button class="li-container" onclick="window.location.href='#datavis'">
@@ -77,22 +77,22 @@
             </div>
         </div>
 
-        <div class = "section" id = "three">
-            <div class = "sm-section">
+        <div class = "section">
+            <div class = "sm-section" id = "fraticelli">
                 <img src = "Images/petri2.jpg" alt = "Petri Dish with Tissue">
                 <br><br>
                 <h1>Fraticelli Lab</h1>
                 <p>Institute of Research Biomedicine, Barcelona, Spain</p>
                 <p>Worked under Principle Investigator Alejo Fraticelli to study the effect of varying dosages of cancer drugs on eukaryotic cells.</p>
             </div>
-            <div class = "sm-section">
+            <div class = "sm-section" id = "bagnat">
                 <img src = "Images/gel.jpg" alt = "Electrophoresis Gel">      
                 <br><br>
                 <h1>Bagnat Lab</h1>
                 <p>Duke University, Durham, North Carolina, USA</p>
                 <p>Worked under Principle Investigator Michel Bagnat and Assistant Professor Daniel Levic to study sorting proteins in the interstitial lumen of Zebrafish.</p>
             </div>
-            <div class = "sm-section">
+            <div class = "sm-section" id = "waksman">
                 <img src = "Images/duckweed.webp" alt = "Duckweek">
                 <br><br>
                 <h1>Waksman</h1>
