navbar arrow toggle responsiveness

--- a/main.html
+++ b/main.html
@@ -46,6 +46,7 @@
             </button>
             <br>
         </ul>
+        <!-- <div class="arrow-toggle">&#9654;</div> -->
     </div>
     <div class="arrow-toggle">&#9654;</div>
 
