--- a/index.html
+++ b/index.html
@@ -36,110 +36,72 @@
           <li>
             <div class="item-inner">
               <div class="time-wrapper">
-                <time>2024</time>
+                <time>Huang Lab <small>05.2023 - present</small></time>
               </div>
               <div class="details">
-                <h3>Heading Here</h3>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                <h3></h3>
+                <p>Current active participant of the Huang Lab. Attend journal clubs and give updates during weekly lab meetings at the time of active work. Assists in the creation of a prokaryotic siRNA (pro-siRNA) library through extraction and purification. Continuous testing of several pro-siRNA through transfection into HeLa cells to evaluate the extent of protein expression and toxicity. These are tested through fluorescent dyeing and high content screening (HCS). Creation of a capstone that consisted of evaluating 8 scientific image analysis software programs, quantitative benchmarking of several Cellular Segmentation Software Programs, and the creation of an original web application for post-segmentation image analysis and data processing. 
+                </p>
               </div>
             </div>
           </li>
           <li>
             <div class="item-inner">
               <div class="time-wrapper">
-                <time>1937</time>
+                <time>Di Talia Lab <small>03.2024 - 07.2024</small></time>
               </div>
               <div class="details">
-                <h3>Heading Here</h3>
-                <p>Proin quam velit, efficitur vel neque vitae, rhoncus commodo mi. Suspendisse finibus mauris et bibendum molestie. Aenean ex augue, varius et pulvinar in, pretium non nisi.</p>
+                <h3></h3>
+                <p>Attend journal clubs and give occasional updates during weekly lab meetings. Assisted Priyom Adhyapok in confocal microscopy image analysis using ImageJ and Cellpose. Other jobs related to protein expression analysis in zebrafish including sustaining mutant lines. 
+                </p>
               </div>
             </div>
           </li>
           <li>
             <div class="item-inner">
               <div class="time-wrapper">
-                <time>1940</time>
+                <time>DKU DNAS <small>05.2023 - 12.2023</small></time>
               </div>
               <div class="details">
-                <h3>Heading Here</h3>
-                <p>Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros.</p>
+                <h3></h3>
+                <p>Maintain regular updates of Duke Kunshan University’s Division of Natural and Applied Sciences website with student opportunities. Design and suggest improvements to areas of the website using WordPress, JS, Python, HTML, and CSS. 
+                </p>
               </div>
             </div>
           </li>
           <li>
             <div class="item-inner">
               <div class="time-wrapper">
-                <time>1943</time>
+                <time>IRB Barcelona <small>04.2022 - 06.2022</small></time>
               </div>
               <div class="details">
-                <h3>Heading Here</h3>
-                <p>In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.</p>
+                <h3></h3>
+                <p>Attend journal clubs and weekly lab meetings. Maintain lab cleanliness and autoclave equipment while maintaining aseptic techniques. Regularly maintained mutant lines of zebrafish through DNA extraction and genotyping processes. Occasionally created new mutant lines though embryo injection. Perform other relevant microbiology techniques to assistant Daniel Levic, PhD with relevant studies. 
+                </p>
               </div>
             </div>
           </li>
           <li>
             <div class="item-inner">
               <div class="time-wrapper">
-                <time>1946</time>
+                <time>Rutger Waksman WISE <small>07.2019 - 08.2019</small></time>
               </div>
               <div class="details">
-                <h3>Heading Here</h3>
-                <p>In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.</p>
+                <h3></h3>
+                <p>Attended lab for a full workday to learn basic molecular biology techniques through the discovery and publication of novel lemna minor (duckweed) sequences.
+                </p>
               </div>
             </div>
           </li>
           <li>
             <div class="item-inner">
               <div class="time-wrapper">
-                <time>1956</time>
+                <time>Raritan Headwaters Association <small>05.2016 - 08.2021</small></time>
               </div>
               <div class="details">
-                <h3>Heading Here</h3>
-                <p>Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros</p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="item-inner">
-              <div class="time-wrapper">
-                <time>1967</time>
-              </div>
-              <div class="details">
-                <h3>Heading Here</h3>
-                <p>In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.</p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="item-inner">
-              <div class="time-wrapper">
-                <time>1985</time>
-              </div>
-              <div class="details">
-                <h3>Heading Here</h3>
-                <p>Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros</p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="item-inner">
-              <div class="time-wrapper">
-                <time>2000</time>
-              </div>
-              <div class="details">
-                <h3>Heading Here</h3>
-                <p>In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.</p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="item-inner">
-              <div class="time-wrapper">
-                <time>2012</time>
-              </div>
-              <div class="details">
-                <h3>Heading Here</h3>
-                <p>Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros</p>
+                <h3></h3>
+                <p>Performed a quarterly biological and chemical assessment of a total of 18 sites on several local streams. Biological assessment consisted of surveying the ecology and assessing the quantity of aquatic fauna. Chemical assessment consisted of either bringing water samples to a testing lab to analyze key chemical properties (i.e. DO, nitrates, pH, phosphates, etc.) or fine-tune calibration of a water quality meter. 
+                </p>
               </div>
             </div>
           </li>
